samples/_failures_safe/1761184914_db1ea2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_642a8cd1.c: In function ‘main’:
./samples/SAFE/__tmp_642a8cd1.c:130:9: error: expected declaration or statement at end of input
  130 |         printf("Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_642a8cd1.c:130:9: error: expected declaration or statement at end of input
